force-app/main/default/objects/Staging_Course__c.object
<CustomObject>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Error while attempting to upsert target record</description>
        <label>Error Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A unique, external ID of the staging table</description>
        <externalId>true</externalId>
        <inlineHelpText>A unique, external ID of the staging table</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <externalId>true</externalId>
        <label>Job Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Error_Date__c</fullName>
        <description>Time error message was last set</description>
        <label>Last Error Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Hash_Change_Date__c</fullName>
        <description>Time at which hash was last changed</description>
        <label>Last Hash Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Job_Date__c</fullName>
        <description>Time of latest parent Job from MiX</description>
        <label>Last Job Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payload_Hash__c</fullName>
        <externalId>true</externalId>
        <label>Payload Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payload_JSON__c</fullName>
        <label>Payload JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Staging Course</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Staging Course Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>